tests/mm0_mmu/fail/bad-sort4132.mm0
-- bad modifier order
free pure provable strict sort s4132;